# fastapi-mailman

./: 404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  index.html  makefile  mkdocs.yml  pyproject.toml  pytest.ini  setup.cfg  sitemap.xml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  preview.yml  release.yml
changelog/: index.html
contributing/: index.html
docs/: index.md
examples/basic/: app.py  views.py
fastapi_mailman/: __init__.py  config.py  globals.py  message.py  utils.py
fastapi_mailman/backends/: base.py  console.py  dummy.py  file.py  locmem.py  smtp.py
search/: search_index.json
tests/: __init__.py.old  conftest.py  test_backend.py  test_backend.py.old  test_connection.py  test_initialization.py  test_mail.py
